Self_Paced_Exercices/Securing_Workloads/HTTPS_Gateway/answer/Gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: generic-https
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "lb.net"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: https
    hosts:
    - "lb.net"
    tls:
      mode: SIMPLE
      credentialName: my-tls-cert-secret
      minProtocolVersion: TLSV1_2
